{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "UI",
            "id": "e5262830-e961-4459-825e-5a73b9920bcb",
            "actions": [
                {
                    "name": "Continue",
                    "type": "Button",
                    "id": "c526e9d9-7e85-4401-ba8b-133acf367c8e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select1",
                    "type": "Button",
                    "id": "8822ef62-3eca-4d65-ab8c-b7fd54301cf4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select2",
                    "type": "Button",
                    "id": "dfa44fd0-e5f0-4c8d-b306-ed49eda79300",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select3",
                    "type": "Button",
                    "id": "ccaa1d4a-bb45-4bef-89ef-d50380edb8d5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select4",
                    "type": "Button",
                    "id": "0692bd6d-a5f1-4f3c-b80d-2bf51c377eb2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select5",
                    "type": "Button",
                    "id": "6b9a92c9-8341-4566-a4ef-81182d5a002b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "94114020-4c84-43ca-bdcb-64c7ab4439a7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11886f3e-a017-4fb2-bba2-360d370e16d7",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "802c450d-752f-4d1a-a020-d3bbf5bf62ed",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3db7f115-758b-4381-a7d8-86265a8514af",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "feb59800-f465-445f-b8f2-328c2b47c9a7",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9c6ea4e-02ae-43c0-ae9c-cf2f7b33315d",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}